--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_dark.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_key_preview_dark.xml
@@ -29,7 +29,7 @@
         android:radius="3dp"
         />
     <solid
-        android:color="#FF141414"
+        android:color="@color/background_dark"
         />
     <padding
         android:left="1dp"
@@ -44,7 +44,7 @@
 
     <stroke
         android:width="2dp"
-        android:color="#FF373737"
+        android:color="@color/keyboard_background_dark"
         />
 
 </shape>
