--- a/LimeStudio/app/src/main/res/drawable/ic_suggest_scroll_background_pink.xml
+++ b/LimeStudio/app/src/main/res/drawable/ic_suggest_scroll_background_pink.xml
@@ -29,7 +29,7 @@
         android:drawable="@color/second_background_pink" />
 
     <item android:state_pressed="true"
-        android:drawable="@color/background_pink_hl" />
+        android:drawable="@color/pink_hl" />
 
 
 </selector>
