--- a/LimeStudio/app/src/main/res/layout/candidates.xml
+++ b/LimeStudio/app/src/main/res/layout/candidates.xml
@@ -28,7 +28,7 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/candidate_container_background"
+        android:background="@color/color_transparent"
 			>
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,15 +36,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/composing_text_size"
-        android:textColor="@color/composing_text"
-        android:background="@color/composing_background"
+        android:textColor="@color/second_foreground_light"
+        android:background="@color/composing_background_light"
         android:minWidth="0dip"
         android:gravity="top"
         />
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
-        android:background="@color/candidate_background">
+        android:background="@color/third_background_light">
 
     <view xmlns:android="http://schemas.android.com/apk/res/android"
 		    class="net.toload.main.hd.candidate.CandidateView"
@@ -52,7 +52,7 @@
 	        android:layout_width="0dp"
 	        android:layout_height="@dimen/candidate_stripe_height"
 	        android:layout_weight="1"
-	        android:background="@color/candidate_background"
+	        android:background="@color/third_background_light"
 			/>
 
      <LinearLayout
