--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_normal_key_pressed_dark.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_normal_key_pressed_dark.xml
@@ -27,7 +27,7 @@
         android:radius="3dp"
         />
     <solid
-        android:color="#FF717171"
+        android:color="@color/third_foreground_dark"
         />
     <padding
         android:left="1dp"
@@ -42,7 +42,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#FF373737"
+        android:color="@color/keyboard_background_dark"
         />
 
 </shape>
