--- a/LimeStudio/app/src/main/res/layout/key_preview_dark.xml
+++ b/LimeStudio/app/src/main/res/layout/key_preview_dark.xml
@@ -27,7 +27,7 @@
     android:layout_width="wrap_content"
     android:layout_height="120sp"
     android:textSize="40sp"
-    android:textColor="@color/limekeyboard_normal_key_color_dark"
+    android:textColor="@color/foreground_dark"
     android:minWidth="32dip"
     android:gravity="center|top"
     android:background="@drawable/btn_flat_keyboard_key_preview_dark"
