--- a/LimeStudio/app/src/main/res/xml/lime_abc_shift.xml
+++ b/LimeStudio/app/src/main/res/xml/lime_abc_shift.xml
@@ -68,7 +68,7 @@
         <Key limehd:codes="83" limehd:keyLabel="S"  limehd:keyEdgeFlags="right"/>
     </Row>
     <Row>
-        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift_shifted" limehd:iconPreview="@drawable/sym_keyboard_feedback_shift"
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift_shifted"
                 limehd:keyWidth="15%p" limehd:isModifier="true"
                 limehd:isSticky="true" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="84" limehd:keyLabel="T"/>
@@ -78,22 +78,22 @@
         <Key limehd:codes="88" limehd:keyLabel="X"/>
         <Key limehd:codes="89" limehd:keyLabel="Y"/>
         <Key limehd:codes="90" limehd:keyLabel="Z"/>
-        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" 
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 limehd:isRepeatable="true"/>
     </Row>
 
     <Row limehd:rowEdgeFlags="bottom">
-        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="-10" limehd:keyLabel="中"  limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:codes="58" limehd:keyLabel=":" limehd:keyWidth="10%p"/>
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="30%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space"  limehd:keyWidth="30%p" limehd:isRepeatable="true"/>
         <Key limehd:codes="59" 
         		limehd:keyLabel=";"
         		 limehd:popupKeyboard="@xml/popup_c_punctuation"   
         		limehd:keyWidth="10%p"/>
         <Key limehd:codes="-2"  limehd:keyLabel="@string/label_symbol_key" limehd:isModifier="true"/>
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
     
     
