--- a/LimeStudio/app/src/main/res/xml/lime_dayi_sym_shift.xml
+++ b/LimeStudio/app/src/main/res/xml/lime_dayi_sym_shift.xml
@@ -80,12 +80,12 @@
 		<Key limehd:codes="66" limehd:keyLabel="B\n馬" />
 		<Key limehd:codes="78" limehd:keyLabel="N\n魚" />
 		<Key limehd:codes="77" limehd:keyLabel="M\n雨" />
-		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
 			limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
 			limehd:isRepeatable="true" />
 	</Row>
 	<Row limehd:rowEdgeFlags="bottom">
-		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"
+		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"
 			limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
 		<Key limehd:codes="-9" 
 				limehd:keyLabel="123\nEN"
@@ -93,14 +93,14 @@
 				limehd:isModifier="true" 
 				limehd:keyWidth="10%p" 
 				/>
-		<Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+		<Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space"
 			limehd:keyWidth="30%p" limehd:isRepeatable="true" />
 		<Key limehd:codes="60" limehd:keyLabel="&lt;\n力" limehd:keyWidth="10%p" />
 		<Key limehd:codes="62" limehd:keyLabel="&gt;\n舟"						 
 								limehd:popupKeyboard="@xml/popup_punctuation"  
 								limehd:keyWidth="10%p" />
 		<Key limehd:codes="63" limehd:keyLabel="\?\n竹" limehd:keyWidth="10%p" />
-		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
 			limehd:keyWidth="15%p" limehd:keyEdgeFlags="right" />
 	</Row>
 
