--- a/LimeStudio/app/src/main/res/xml/lime_english_number.xml
+++ b/LimeStudio/app/src/main/res/xml/lime_english_number.xml
@@ -100,7 +100,7 @@
     </Row>
     
     <Row>
-        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift" limehd:iconPreview="@drawable/sym_keyboard_feedback_shift" 
+        <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
                 limehd:keyWidth="15%p" limehd:isModifier="true"
                 limehd:isSticky="true"/>
         <Key limehd:codes="122" limehd:keyLabel="z"
@@ -118,67 +118,67 @@
                 limehd:popupCharacters="@string/alternates_for_n"
         />
         <Key limehd:codes="109" limehd:keyLabel="m"/>
-        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 limehd:isRepeatable="true"/>
     </Row>
 
     <Row limehd:keyboardMode="@+id/mode_normal" limehd:rowEdgeFlags="bottom">
-    	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+    	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="," limehd:keyWidth="10%p" />
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space"
-                limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
+
                 limehd:keyWidth="30%p" limehd:isRepeatable="true"/>
         <Key limehd:codes="46" limehd:keyLabel="."  limehd:popupKeyboard="@xml/popup_punctuation" 
                 limehd:keyWidth="10%p"/>
         <Key limehd:codes="-2"  limehd:keyLabel="@string/label_symbol_key" limehd:isModifier="true" limehd:keyWidth="10%p" />
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
 
     <Row limehd:keyboardMode="@+id/mode_url" limehd:rowEdgeFlags="bottom">
-        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="@string/popular_domain_0"
                 limehd:keyOutputText="@string/popular_domain_0"
                  limehd:popupKeyboard="@xml/popup_domains"
                 limehd:keyWidth="15%p"/>
         <Key limehd:keyLabel="/" limehd:keyWidth="10%p"/>
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space"
-                limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
+
                 limehd:keyWidth="15%p" limehd:isRepeatable="true"/>
         <Key limehd:keyLabel="."  limehd:popupKeyboard="@xml/popup_punctuation"
                 limehd:keyWidth="10%p"/>
         <Key limehd:codes="-2"  limehd:keyLabel="@string/label_symbol_key" limehd:isModifier="true" limehd:keyWidth="10%p" />
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
 
     <Row limehd:keyboardMode="@+id/mode_email" limehd:rowEdgeFlags="bottom">
-    	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+    	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="\@" limehd:keyWidth="10%p"/>
         <Key limehd:keyLabel="@string/popular_domain_0"
                 limehd:keyOutputText="@string/popular_domain_0"
                  limehd:popupKeyboard="@xml/popup_domains"
                 limehd:keyWidth="15%p"/>
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space"
-                limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
+
                 limehd:keyWidth="15%p" limehd:isRepeatable="true"/>
         <Key limehd:keyLabel="."  limehd:popupKeyboard="@xml/popup_punctuation"
                 limehd:keyWidth="10%p"/>
         <Key limehd:codes="-2"  limehd:keyLabel="@string/label_symbol_key" limehd:isModifier="true" limehd:keyWidth="10%p" />
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
 
     <Row limehd:keyboardMode="@+id/mode_im" limehd:rowEdgeFlags="bottom">
-    	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+    	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="," limehd:keyWidth="10%p"/>
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space"
-                limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
+
                 limehd:keyWidth="25%p" limehd:isRepeatable="true"/>
         <Key limehd:codes="46" limehd:keyLabel="."  limehd:popupKeyboard="@xml/popup_punctuation" 
                 limehd:keyWidth="10%p"/>
