--- a/LimeStudio/app/src/main/res/xml/lime_et_41.xml
+++ b/LimeStudio/app/src/main/res/xml/lime_et_41.xml
@@ -78,19 +78,19 @@
 		<Key limehd:codes="110" limehd:keyLabel="n\nㄋ" />
 		<Key limehd:codes="109" limehd:keyLabel="m\nㄇ" />
 		<Key limehd:codes="39" limehd:keyLabel="'\nㄘ" />
-		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
 			 limehd:keyEdgeFlags="right"	limehd:isRepeatable="true" />
 	</Row>
 
 
 	<Row limehd:rowEdgeFlags="bottom">
-		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"
+		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"
 			  	limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
 		<Key limehd:codes="-9" 
 				limehd:keyLabel="EN"  limehd:isModifier="true" 
 				limehd:keyWidth="10%p" 
 				/>
-		<Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+		<Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space"
 				limehd:keyWidth="15%p" limehd:isRepeatable="true" />
 		<Key limehd:codes="44" limehd:keyLabel=",\nㄓ"/>
 		<Key limehd:codes="46" 
@@ -100,7 +100,7 @@
 		<Key limehd:codes="47" limehd:keyLabel="/\nㄕ" />
 		<Key limehd:codes="45" limehd:keyLabel="-\nㄥ" />
 		<Key limehd:codes="61" limehd:keyLabel="=\nㄦ" />
-		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
 				limehd:keyEdgeFlags="right" />
 	</Row>
 </Keyboard>
