--- a/LimeStudio/app/src/main/res/xml/lime_hs_shift.xml
+++ b/LimeStudio/app/src/main/res/xml/lime_hs_shift.xml
@@ -81,13 +81,13 @@
 		<Key limehd:codes="109" limehd:keyLabel="m" />
 		<Key limehd:codes="91" limehd:keyLabel="[" />
 		<Key limehd:codes="93" limehd:keyLabel="]" />
-		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+		<Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
 			limehd:isRepeatable="true" />
 	</Row>
 
 
 	<Row limehd:rowEdgeFlags="bottom">
-		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"
+		<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"
 			limehd:keyEdgeFlags="left" />
 		<Key limehd:codes="-9" 
 				limehd:keyLabel="EN"  limehd:isModifier="true" 
@@ -100,12 +100,12 @@
 				 limehd:popupKeyboard="@xml/popup_c_punctuation"   
 				limehd:keyWidth="10%p" />
 		<Key limehd:codes="32"
-			limehd:keyIcon="@drawable/sym_flat_keyboard_space" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+			limehd:keyIcon="@drawable/sym_flat_keyboard_space"
 			limehd:keyWidth="10%p" limehd:isRepeatable="true" />
 		<Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p" />
         <Key limehd:codes="39" limehd:keyLabel="\'"/>
 		<Key limehd:codes="47" limehd:keyLabel="/" limehd:keyWidth="10%p" />
-		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+		<Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
 			limehd:keyEdgeFlags="right"/>
 	</Row>
 </Keyboard>
