--- a/LimeStudio/app/src/main/res/xml/lime_phonetic.xml
+++ b/LimeStudio/app/src/main/res/xml/lime_phonetic.xml
@@ -85,17 +85,17 @@
     </Row>
     
     <Row limehd:rowEdgeFlags="bottom">
-        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"  limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"  limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="-1" limehd:keyIcon="@drawable/sym_keyboard_shift"
 			limehd:keyWidth="15%p" limehd:isModifier="true" limehd:isSticky="true" />
         <Key limehd:codes="-9" 
             limehd:keyLabel="123\nEN"
 			limehd:popupKeyboard="@xml/popup_symbol_mode"	
             limehd:isModifier="true"  />     
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="20%p" limehd:isRepeatable="true"/>
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"  limehd:keyWidth="20%p" limehd:isRepeatable="true"/>
         <Key limehd:codes="45" limehd:keyLabel="-\nㄦ"/>
-        <Key limehd:codes="-5" limehd:keyWidth="15%p" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" limehd:isRepeatable="true"/>
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="-5" limehd:keyWidth="15%p" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true" limehd:isRepeatable="true"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
     
 </Keyboard>
