--- a/LimeStudio/app/src/main/res/xml/phone.xml
+++ b/LimeStudio/app/src/main/res/xml/phone.xml
@@ -36,7 +36,7 @@
         <Key limehd:codes="49" limehd:iconPreview="@drawable/phone_1_l" limehd:keyIcon="@drawable/phone_1"/>
         <Key limehd:codes="50,97,98,99" limehd:iconPreview="@drawable/phone_2_l" limehd:keyIcon="@drawable/phone_2"/>
         <Key limehd:codes="51,100,101,102" limehd:iconPreview="@drawable/phone_3_l" limehd:keyIcon="@drawable/phone_3"/>
-        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"  limehd:keyEdgeFlags="right" limehd:isRepeatable="true"/>
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"  limehd:keyEdgeFlags="right" limehd:isRepeatable="true"/>
     </Row>
     
     <Row>
@@ -53,15 +53,15 @@
         <Key limehd:codes="55,112,113,114,115" limehd:iconPreview="@drawable/phone_7_l" limehd:keyIcon="@drawable/phone_7"/>
         <Key limehd:codes="56,116,117,118" limehd:iconPreview="@drawable/phone_8_l" limehd:keyIcon="@drawable/phone_8"/>
         <Key limehd:codes="57,119,120,121,122" limehd:iconPreview="@drawable/phone_9_l" limehd:keyIcon="@drawable/phone_9"/>
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space" limehd:iconPreview="@drawable/sym_keyboard_feedback_space" limehd:isRepeatable="true" limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_flat_keyboard_space" limehd:isRepeatable="true" limehd:keyEdgeFlags="right"/>
     </Row>
     
     <Row limehd:rowEdgeFlags="bottom">
-        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="40,41,91,93" limehd:iconPreview="@drawable/phone_left_l" limehd:keyIcon="@drawable/phone_left"/>
         <Key limehd:codes="48,126,94,123,125" limehd:iconPreview="@drawable/phone_0_l" limehd:keyIcon="@drawable/phone_0"/>
         <Key limehd:codes="44,59,63,92,46" limehd:iconPreview="@drawable/phone_right_l" limehd:keyIcon="@drawable/phone_right"/>
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"  limehd:keyEdgeFlags="right"/>
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"  limehd:keyEdgeFlags="right"/>
     </Row>
     
 </Keyboard>
