--- a/LimeStudio/app/src/main/res/xml/symbols.xml
+++ b/LimeStudio/app/src/main/res/xml/symbols.xml
@@ -68,24 +68,24 @@
         <Key limehd:codes="59" limehd:keyLabel=";"/>
         <Key limehd:codes="47" limehd:keyLabel="/" />
         <Key limehd:codes="63" limehd:keyLabel="\?"/>
-        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true"
+        <Key limehd:codes="-5" limehd:keyIcon="@drawable/sym_keyboard_delete_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 limehd:isRepeatable="true"/>
     </Row>
     
     <Row  limehd:rowEdgeFlags="bottom">
-        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true"
+        <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="left" />
         <Key limehd:codes="-2" limehd:isModifier="true" limehd:keyLabel="EN"  limehd:keyWidth="10%p" />
         <Key limehd:codes="44" limehd:keyLabel="," limehd:keyWidth="10%p" />
-        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space" 
-        	 limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
+        <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_light"
+
         	 limehd:keyWidth="30%p" limehd:isRepeatable="true"/>
         <Key limehd:codes="46" limehd:keyLabel="." 
         						 limehd:popupKeyboard="@xml/popup_punctuation" 
         						limehd:keyWidth="10%p"/>
         <Key limehd:codes="-10" limehd:isModifier="true" limehd:keyLabel="中"  limehd:keyWidth="10%p" />
-        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true"
+        <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return_light" limehd:isModifier="true"
                 limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"
                 />
     </Row>
