New tech blue theme and remove unused function key preview icon style in LIMEKeyboard

--- a/LimeStudio/app/src/main/res/drawable/btn_keyboard_key_tech_blue.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_keyboard_key_tech_blue.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+
 <!--
   ~ /*
   ~  **    Copyright 2015, The LimeIME Open Source Project
@@ -21,21 +23,20 @@
   ~  */
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
-    <corners
-        android:radius="1.5dp"
-        />
-    <solid
-        android:color="@color/keyboard_background_pink"
-        />
-    <padding
-        android:left="1dp"
-        android:top="1dp"
-        android:right="1dp"
-        android:bottom="1dp"
-        />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+	<!-- Functional keys. -->
+
+    <item android:state_single="true" android:state_pressed="true"
+          android:drawable="@drawable/btn_flat_keyboard_function_key_pressed_tech_blue" />
+    <item android:state_single="true"
+          android:drawable="@drawable/btn_flat_keyboard_function_key_normal_tech_blue"/>
 
 
+    <!-- Normal keys -->
 
-</shape>
+    <item android:state_pressed="true"
+          android:drawable="@drawable/btn_flat_keyboard_normal_key_pressed_tech_blue" />
+    <item
+          android:drawable="@drawable/btn_flat_keyboard_normal_key_normal_tech_blue" />
+          
+</selector>
