--- a/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_normal_key_normal_tech_blue.xml
+++ b/LimeStudio/app/src/main/res/drawable/btn_flat_keyboard_normal_key_normal_tech_blue.xml
@@ -24,10 +24,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <corners
-        android:radius="1.5dp"
+        android:radius="3dp"
         />
     <solid
-        android:color="@color/keyboard_background_pink"
+        android:color="@color/second_background_tech_blue"
         />
     <padding
         android:left="1dp"
@@ -35,7 +35,14 @@
         android:right="1dp"
         android:bottom="1dp"
         />
+    <size
+        android:width="30dp"
+        android:height="46dp"
+        />
 
-
+    <stroke
+        android:width="1dp"
+        android:color="@color/keyboard_background_tech_blue"
+        />
 
 </shape>
