--- a/LimeStudio/app/src/main/res/drawable/keyboard_popup_panel_background_dark.xml
+++ b/LimeStudio/app/src/main/res/drawable/keyboard_popup_panel_background_dark.xml
@@ -27,7 +27,7 @@
         android:radius="1.5dp"
         />
     <solid
-        android:color="#FF373737"
+        android:color="@color/keyboard_background_dark"
         />
     <padding
         android:left="1dp"
