--- a/LimeStudio/app/src/main/res/values/strings_settings.xml
+++ b/LimeStudio/app/src/main/res/values/strings_settings.xml
@@ -667,6 +667,7 @@
         <item>淺色</item>
         <item>深色</item>
         <item>粉紅</item>
+        <item>科技藍</item>
     </string-array>
 
 
@@ -674,6 +675,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
 
