--- a/LimeStudio/app/src/main/res/values/styles.xml
+++ b/LimeStudio/app/src/main/res/values/styles.xml
@@ -24,8 +24,6 @@
 
 <resources>
 
-    <style name="LIMEAlertDialogTheme" parent="@android:style/Theme.DeviceDefault.Dialog">
-    </style>
     <style name="LIMEKeyboard">
         <item name="spaceKeyVerticalCorrection">@dimen/spacebar_vertical_correction</item>
         <item name="spaceKeySlidingTextSize">@dimen/spacebar_preview_text_size</item>
@@ -69,14 +67,27 @@
     </style>
 
     <style name="LIMEKeyboard.Pink" parent = "LIMEKeyboard">
-        <item name="spaceKeyIcon">@drawable/sym_keyboard_space_pink</item>
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
         <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_dark</item>
-        <item name="enterKeyIcon">@drawable/sym_keyboard_return_pink</item>
-        <item name="searchKeyIcon">@drawable/sym_keyboard_search_pink</item>
-        <item name ="doneKeyIcon">@drawable/sym_keyboard_done_pink</item>
-        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_pink</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return_white</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search_white</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done_white</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_white</item>
         <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_pink</item>
         <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_pink</item>
+        <item name="spaceKeyTextColor">@color/color_white</item>
+        <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
+        <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
+    </style>
+    <style name="LIMEKeyboard.TechBlue" parent = "LIMEKeyboard">
+        <item name="spaceKeyIcon">@drawable/sym_keyboard_space_white</item>
+        <item name="spaceKeyPreviewIcon">@drawable/sym_flat_keyboard_space_dark</item>
+        <item name="enterKeyIcon">@drawable/sym_keyboard_return_white</item>
+        <item name="searchKeyIcon">@drawable/sym_keyboard_search_white</item>
+        <item name ="doneKeyIcon">@drawable/sym_keyboard_done_white</item>
+        <item name ="deleteKeyIcon">@drawable/sym_keyboard_delete_white</item>
+        <item name ="shiftKeyIcon">@drawable/sym_keyboard_shift_tech_blue</item>
+        <item name ="shiftKeyShiftedIcon">@drawable/sym_keyboard_shift_shifted_tech_blue</item>
         <item name="spaceKeyTextColor">@color/color_white</item>
         <item name="spaceKeySlidingLeftArrow">@drawable/sym_keyboard_previous_white</item>
         <item name="spaceKeySlidingRightArrow">@drawable/sym_keyboard_next_white</item>
@@ -98,6 +109,10 @@
         <item name="android:background">@drawable/keyboard_background_pink</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_pink</item>
     </style>
+    <style name="LIMEKeyboardLayout.TechBlue" parent = "LIMEKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_background_tech_blue</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
+    </style>
 
     <style name="LIMEPopupKeyboardLayout">
         <item name="android:background">@drawable/keyboard_popup_panel_background_light</item>
@@ -115,12 +130,29 @@
         <item name="android:background">@drawable/keyboard_popup_panel_background_pink</item>
         <item name="android:keyBackground">@drawable/btn_keyboard_key_pink</item>
     </style>
+    <style name="LIMEPopupKeyboardLayout.TechBlue" parent = "LIMEPopupKeyboardLayout">
+        <item name="android:background">@drawable/keyboard_popup_panel_background_tech_blue</item>
+        <item name="android:keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
+    </style>
 
     <style name="LIMEKeyboardBaseView">
-        <item name="keyPreviewLayout">@layout/key_preview_dark</item>
+        <item name="keyPreviewLayout">@layout/key_preview_light</item>
+        <item name="android:background">@drawable/keyboard_background_light</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_light</item>
+        <item name="keyTextSize">@dimen/key_text_size</item>
+        <item name="popupHint">@drawable/hint_popup</item>
+
+        <item name="keyTextColorNormal">@color/foreground_light</item>
+        <item name="keyTextColorPressed">@color/color_common_green_hl</item>
+
+        <item name="functionKeyTextColorNormal">@color/second_foreground_light</item>
+        <item name="functionKeyTextColorPressed">@color/color_common_light_green_hl</item>
+
+        <item name="keySubLabelTextColorNormal">@color/third_foreground_light</item>
+        <item name="keySubLabelTextColorPressed">@color/color_common_light_green_hl</item>
+
         <item name="keyPreviewOffset">@dimen/key_preview_offset</item>
         <item name="keyPreviewHeight">@dimen/key_preview_height</item>
-        <item name="keyTextSize">@dimen/key_text_size</item>
         <item name="labelTextSize">@dimen/label_text_size</item>
         <item name="subLabelTextSize">@dimen/sub_label_text_size</item>
         <item name="smallLabelTextSize">@dimen/small_label_text_size</item>
@@ -137,9 +169,7 @@
     </style>
     <style name="LIMEKeyboardBaseView.Light" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_light</item>
-        <item name="android:background">@drawable/keyboard_background_light</item>
         <item name="keyBackground">@drawable/btn_keyboard_key_light</item>
-        <item name="keyTextSize">@dimen/key_text_size</item>
         <item name="popupHint">@drawable/hint_popup</item>
 
         <item name="keyTextColorNormal">@color/foreground_light</item>
@@ -154,9 +184,7 @@
     </style>
     <style name="LIMEKeyboardBaseView.Pink" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_pink</item>
-        <item name="android:background">@drawable/keyboard_background_pink</item>
         <item name="keyBackground">@drawable/btn_keyboard_key_pink</item>
-        <item name="keyTextSize">@dimen/key_text_size</item>
         <item name="popupHint">@drawable/hint_popup_dark</item>
 
         <item name="keyTextColorNormal">@color/color_white</item>
@@ -169,12 +197,25 @@
         <item name="keySubLabelTextColorPressed">@color/color_white</item>
 
     </style>
+    <style name="LIMEKeyboardBaseView.TechBlue" parent = "LIMEKeyboardBaseView">
+        <item name="keyPreviewLayout">@layout/key_preview_tech_blue</item>
+        <item name="keyBackground">@drawable/btn_keyboard_key_tech_blue</item>
+        <item name="popupHint">@drawable/hint_popup_dark</item>
+
+        <item name="keyTextColorNormal">@color/foreground_tech_blue</item>
+        <item name="keyTextColorPressed">@color/tech_blue_hl</item>
+
+        <item name="functionKeyTextColorNormal">@color/color_white</item>
+        <item name="functionKeyTextColorPressed">@color/tech_blue_hl</item>
+
+        <item name="keySubLabelTextColorNormal">@color/color_white</item>
+        <item name="keySubLabelTextColorPressed">@color/tech_blue_hl</item>
+
+    </style>
 
     <style name="LIMEKeyboardBaseView.Dark" parent = "LIMEKeyboardBaseView">
         <item name="keyPreviewLayout">@layout/key_preview_dark</item>
-        <item name="android:background">@drawable/keyboard_background_dark</item>
         <item name="keyBackground">@drawable/btn_keyboard_key_dark</item>
-        <item name="keyTextSize">@dimen/key_text_size</item>
         <item name="popupHint">@drawable/hint_popup_dark</item>
 
         <item name="keyTextColorNormal">@color/foreground_dark</item>
@@ -217,10 +258,16 @@
     </style>
 
     <style name="LIMEBaseKeyboard.Pink" parent = "LIMEBaseKeyboard">
-        <item name="drawableArrowUp">@drawable/sym_keyboard_up_pink</item>
-        <item name="drawableArrowDown">@drawable/sym_keyboard_down_pink</item>
-        <item name="drawableArrowRight">@drawable/sym_keyboard_right_pink</item>
-        <item name="drawableArrowLeft">@drawable/sym_keyboard_left_pink</item>
+        <item name="drawableArrowUp">@drawable/sym_keyboard_up_white</item>
+        <item name="drawableArrowDown">@drawable/sym_keyboard_down_white</item>
+        <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
+        <item name="drawableArrowLeft">@drawable/sym_keyboard_left_white</item>
+    </style>
+    <style name="LIMEBaseKeyboard.TechBlue" parent = "LIMEBaseKeyboard">
+        <item name="drawableArrowUp">@drawable/sym_keyboard_up_white</item>
+        <item name="drawableArrowDown">@drawable/sym_keyboard_down_white</item>
+        <item name="drawableArrowRight">@drawable/sym_keyboard_right_white</item>
+        <item name="drawableArrowLeft">@drawable/sym_keyboard_left_white</item>
     </style>
 
     <style name="LIMECandidateView">
@@ -302,6 +349,26 @@
         <!-- color of  composing text view above candidate view   -->
         <item name="composingTextColor">@color/pink_hl</item>
         <item name="composingBackgroundColor">@color/composing_background_pink</item>
+    </style>
+
+    <style name="LIMECandidateView.TechBlue"  parent = "LIMECandidateView">
+        <item name="suggestHighlight">@drawable/ic_suggest_scroll_background_tech_blue</item>
+        <item name="voiceInputIcon">@drawable/btn_voice_tech_blue</item>
+        <item name="candidateBackground">@color/candidate_background_tech_blue</item>
+        <item name="ExpandButtonIcon">@drawable/btn_expand_tech_blue</item>
+        <!-- color of  different types of candidates   -->
+        <item name="candidateNormalTextColor">@color/color_black</item>
+        <item name="candidateNormalTextHighlightColor">@color/color_white</item>
+        <item name="composingCodeColor">@color/second_foreground_tech_blue</item>
+        <item name="composingCodeHighlightColor">@color/color_white</item>
+        <!-- color of  spacer between candidate   -->
+        <item name="spacerColor">@color/foreground_tech_blue</item>
+        <!-- color of  selection key display for physical keyboard   -->
+        <item name="selKeyColor">@color/color_black</item>
+        <item name="selKeyShiftedColor">@color/tech_blue_hl</item>
+        <!-- color of  composing text view above candidate view   -->
+        <item name="composingTextColor">@color/tech_blue_hl</item>
+        <item name="composingBackgroundColor">@color/composing_background_tech_blue</item>
     </style>
 
 
