1. Bug fixed on space bar preview not showing  2.Space bar Language preview padding tuning

--- a/LimeStudio/app/src/main/res/values-large/dimens.xml
+++ b/LimeStudio/app/src/main/res/values-large/dimens.xml
@@ -32,7 +32,6 @@
     <dimen name="candidate_number_font_size">15sp</dimen>
     <dimen name="candidate_vertical_padding">12sp</dimen>
     <dimen name="key_preview_height">135dp</dimen>
-    <dimen name="spacebar_vertical_correction">4dip</dimen>
     <dimen name="keyboard_bottom_padding">0.06in</dimen>
     <dimen name="key_text_size">26dp</dimen>
     <dimen name="label_text_size">26dp</dimen>
@@ -41,9 +40,11 @@
     <dimen name="composing_text_size">22sp</dimen>
     <dimen name="notice_text_size">20sp</dimen>
     <dimen name="keyboard_vertical_correction">-0.05in</dimen>
-    <dimen name="spacebar_preview_text_size">28sp</dimen>
+    <dimen name="spacebar_vertical_correction">0dp</dimen>
+    <dimen name="spacebar_preview_text_size">26sp</dimen>
+    <dimen name="spacebar_preview_top_padding">20dp</dimen>
  	<dimen name="mini_keyboard_vertical_correction">-0.05in</dimen>
-    <dimen name="spacebar_preview_top_padding">14dip</dimen>
+
     <!-- WB -->
     <dimen name="wb_key_height">92dip</dimen>
     
