--- a/LimeStudio/app/src/main/res/values/dimens.xml
+++ b/LimeStudio/app/src/main/res/values/dimens.xml
@@ -35,6 +35,7 @@
     <dimen name="phone_key_height">58dip</dimen>
     <dimen name="key_height">46dip</dimen>
     <dimen name="spacebar_vertical_correction">4dip</dimen>
+    <dimen name="spacebar_preview_top_padding">20dp</dimen>
     <dimen name="candidate_stripe_height">30sp</dimen>
     <dimen name="candidate_vertical_padding">10sp</dimen>
     <dimen name="candidate_number_font_size">14sp</dimen>
@@ -53,7 +54,6 @@
     <dimen name="mini_keyboard_fling_vertical_correction">-46dip</dimen>
     <dimen name="mini_keyboard_slide_allowance">0.553in</dimen>
     <dimen name="spacebar_preview_text_size">25sp</dimen>
-    <dimen name="spacebar_preview_top_padding">10dip</dimen>
     <dimen name="preview_top_padding">0dip</dimen>
     <dimen name="key_preview_height">110dp</dimen>
     <dimen name="key_preview_text_size_large">40sp</dimen>
